--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ src="https://www.facebook.com/tr?id=2447407242368502&ev=PageView&noscript=1"
         <a href="#solucao" class="badge">Solução</a>
         <a href="#valor" class="badge">Valor</a>
         <a href="#faq" class="badge">FAQ</a>
-        <a href="https://pay.kirvano.com/55890371-3a1d-4f70-a668-d25d6b1668e1" class="btn cta" target="_blank" rel="noopener">Garantir por R$ 29,90</a>
+        <a href="https://pay.cakto.com.br/9rj9r28" class="btn cta" target="_blank" rel="noopener">Garantir por R$ 29,90</a>
       </nav>
     </div>
   </header>
@@ -214,7 +214,7 @@ src="https://www.facebook.com/tr?id=2447407242368502&ev=PageView&noscript=1"
               <span>Acesso imediato • Mobile-first • Atualizado 2025</span>
             </div>
             <div class="hero-cta">
-              <a href="https://pay.kirvano.com/55890371-3a1d-4f70-a668-d25d6b1668e1" class="btn cta" target="_blank" rel="noopener" aria-label="Garantir agora por 29,90">Garantir por R$ 29,90</a>
+              <a href="https://pay.cakto.com.br/9rj9r28" class="btn cta" target="_blank" rel="noopener" aria-label="Garantir agora por 29,90">Garantir por R$ 29,90</a>
               <a href="#dor" class="btn btn-outline">Ver por que funciona</a>
             </div>
           </div>
@@ -315,7 +315,7 @@ src="https://www.facebook.com/tr?id=2447407242368502&ev=PageView&noscript=1"
             <div class="price">R$ 29,90 <span class="strike">R$ 99,60</span></div>
             <p class="muted">Oferta única até a contagem zerar ou fim de lote. Acesso imediato e garantia de 7 dias.</p>
             <div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:8px">
-              <a href="https://pay.kirvano.com/55890371-3a1d-4f70-a668-d25d6b1668e1" class="btn cta" target="_blank" rel="noopener" aria-label="Garantir agora por 19,90">Garantir por R$ 29,90</a>
+              <a href="https://pay.cakto.com.br/9rj9r28" class="btn cta" target="_blank" rel="noopener" aria-label="Garantir agora por 19,90">Garantir por R$ 29,90</a>
               <span class="badge">Pix • Cartão • Boleto</span>
             </div>
           </div>
@@ -397,7 +397,7 @@ src="https://www.facebook.com/tr?id=2447407242368502&ev=PageView&noscript=1"
             7 dias de garantia • Pagamento via Pix, Cartão e Boleto
           </div>
           <div style="display:flex;gap:10px;flex-wrap:wrap">
-            <a href="https://pay.kirvano.com/55890371-3a1d-4f70-a668-d25d6b1668e1" class="btn cta" target="_blank" rel="noopener" aria-label="Finalizar compra por 19,90">Quero garantir por R$ 29,90</a>
+            <a href="https://pay.cakto.com.br/9rj9r28" class="btn cta" target="_blank" rel="noopener" aria-label="Finalizar compra por 19,90">Quero garantir por R$ 29,90</a>
             <span class="badge">Desconto ativo até a contagem zerar</span>
           </div>
         </div>
@@ -417,7 +417,7 @@ src="https://www.facebook.com/tr?id=2447407242368502&ev=PageView&noscript=1"
           <span class="chip"><span id="ss">--</span>s</span>
         </div>
       </div>
-      <a href="https://pay.kirvano.com/55890371-3a1d-4f70-a668-d25d6b1668e1" class="btn cta" target="_blank" rel="noopener">Garantir por R$ 29,90</a>
+      <a href="https://pay.cakto.com.br/9rj9r28" class="btn cta" target="_blank" rel="noopener">Garantir por R$ 29,90</a>
     </div>
   </div>
 
